--- a/决策树与随机森林.md
+++ b/决策树与随机森林.md
@@ -7,7 +7,7 @@ import pandas as pd
 x=pd.read_csv(r'C:\Users\zhou\Desktop\diabetes.csv',encoding='UTF-8')
 x_array=np.array(x).tolist()
 dataset=x_array[:500]#训练集
-dataset1=x_array[500:]#测试集
+dataset1=x_array[500:510]#测试集
 class DecisionTree(object):
     def __init__(self,algor=None,detla=0.01,root='0'):
         self.algor=algor
@@ -338,7 +338,7 @@ def random_forest(dataset,n,row):
     dataset_random_sample=random_sample1(dataset,n)
     tree=ID3()
     for random_sample in dataset_random_sample:
-        tree1=tree.creatdisiontree(random_sample,fea_labels,0.18)
+        tree1=tree.creatdisiontree(random_sample,fea_labels,0.19)
         forest.append(tree1)#将生成的树加入到森林中
     for inner_tree in forest:#用森林中的每一棵树进行预测
         vote_list.append(inner_predict(inner_tree,row,fea_labels))#返回预测值最多的数
